Issue #3384029: Drag and drop icon is not aligned with the label.

--- a/styles/components/paragraphs.scss
+++ b/styles/components/paragraphs.scss
@@ -225,7 +225,7 @@ html.js .field--widget-paragraphs .paragraphs-dropbutton-wrapper .dropbutton-mul
 
 html.js .field--widget-paragraphs th .paragraphs-actions .paragraphs-dropdown {
   top: 0;
-  right: calc(var(--gin-spacing-xxs) * -1);
+  right: var(--gin-spacing-xxs);
 }
 
 .paragraphs-dropdown-actions {
@@ -304,7 +304,7 @@ html.js .paragraph-type-icon {
   }
 
   &__icon {
-    top: var(--gin-spacing-xs);
+    top: calc(var(--gin-spacing-xxs) / 2);
   }
 }
 
